[package]
name = "pdec"
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
eframe = "0.28.1"
egui = "0.28.1"
egui_plot = "0.28.1"
env_logger = "0.11.3"
log = "0.4.22"
regex = "1.10.5"
reqwest = { version = "0.12.5", features = ["blocking", "cookies", "json"] }
serde = "1.0.204"
serde_derive = "1.0.204"
serde_json = "1.0.120"
